Cap. 5: solo faltan imagenes. Bib: ordenadas alfabeticamente. Ap. B: falta explicacion de video.

--- a/Appendices/AppendixB.tex
+++ b/Appendices/AppendixB.tex
@@ -6,7 +6,7 @@
 
 \lhead{Anexo B. \emph{OVITO}} % Change X to a consecutive letter; this is for the header on each page - perhaps a shortened title
 
-Ciertas imágenes (por ejemplo las figuras \ref{C4:fg:fcc_tension_bmg_10K} y \ref{C5:fg:ss_comp}) fueron realizadas utilizando el software Ovito \citep{stukowski10}. En el presente apéndice explicaremos cómo obtener dichas imágenes y daremos recomendaciones para mejorar el uso del software. Como condición previa es necesario haber instalado y ejecutado LAMMPS (Apéndice \ref{AA}), ya que Ovito trabaja, entre otras cosas, con los archivos de salida de éste.
+Ciertas imágenes (por ejemplo las figuras \ref{C4:fg:fcc_tension_bmg_10K} y \ref{C5:fg:ss_comp_3}) fueron realizadas utilizando el software Ovito \citep{stukowski10}. En el presente apéndice explicaremos cómo obtener dichas imágenes y daremos recomendaciones para mejorar el uso del software. Como condición previa es necesario haber instalado y ejecutado LAMMPS (Apéndice \ref{AA}), ya que Ovito trabaja, entre otras cosas, con los archivos de salida de éste.
 
 \section{Instalación}
 \label{AB_1}
@@ -43,6 +43,8 @@ make -j4
 \label{AB_2}
 
 Para esta sección hemos realizado un video explicativo. El mismo puede observarse \href{https://youtu.be/iGieWcpcQmQ}{aquí}.
+
+En el video se explican ... ???
 
 \section{Automatización}
 \label{AB_3}
