--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -436,8 +436,15 @@ processing and applications of glassy metals},
 @article{setfl,
 
 	Author = {O'Brien, C.},
-	Title = {Formatting EAM Potentials},
+	Title = {Formatting \textsc{EAM} \textsc{P}otentials},
 	url = {https://sites.google.com/a/ncsu.edu/cjobrien/tutorials-and-guides/eam}
+}
+
+@Book{shackelford04,
+  author =	 {Shackelford, J.F.},
+  title = 	 {Introduction to \textsc{M}aterials \textsc{S}cience for \textsc{E}ngineers},
+  publisher = 	 {Prentice Hall},
+  year = 	 2004
 }
 
 @Article{shimizu07,
