--- a/main.tex
+++ b/main.tex
@@ -250,28 +250,28 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 %	SYMBOLS
 %----------------------------------------------------------------------------------------
 
-\clearpage % Start a new page
+%\clearpage % Start a new page
 
-\lhead{\emph{Symbols}} % Set the left side page header to "Symbols"
+%\lhead{\emph{Symbols}} % Set the left side page header to "Symbols"
 
-\listofnomenclature{lll} % Include a list of Symbols (a three column table)
-{
+%\listofnomenclature{lll} % Include a list of Symbols (a three column table)
+%{
 
-$E$ & módulo de Young & GPa \\
-$G$ & módulo de corte & GPa \\
-$R$ & coeficiente de correlación &  \\
-$T$ & temperatura & K \\
-$T_{g}$ & temperatura de transición vítrea & K \\
+%$E$ & módulo de Young & GPa \\
+%$G$ & módulo de corte & GPa \\
+%$R$ & coeficiente de correlación &  \\
+%$T$ & temperatura & K \\
+%$T_{g}$ & temperatura de transición vítrea & K \\
 % Symbol & Name & Unit \\
 
-& & \\ % Gap to separate the Roman symbols from the Greek
+%& & \\ % Gap to separate the Roman symbols from the Greek
 
-$\epsilon$ & deformación ingenieril &  \\
-$\sigma$ & tensión & GPa \\
-$\sigma_{y}$ & tensión de fluencia & GPa \\
-$\sigma_{VM}$ & tensión de von Mieses & GPa \\
+%$\epsilon$ & deformación ingenieril &  \\
+%$\sigma$ & tensión & GPa \\
+%$\sigma_{y}$ & tensión de fluencia & GPa \\
+%$\sigma_{VM}$ & tensión de von Mieses & GPa \\
 % Symbol & Name & Unit \\
-}
+%}
 
 %----------------------------------------------------------------------------------------
 %	DEDICATION
@@ -318,7 +318,6 @@ $\sigma_{VM}$ & tensión de von Mieses & GPa \\
 \input{Appendices/AppendixA}
 \input{Appendices/AppendixB}
 \input{Appendices/AppendixC}
-\input{Appendices/AppendixD}
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
 
@@ -332,7 +331,7 @@ $\sigma_{VM}$ & tensión de von Mieses & GPa \\
 
 \lhead{\emph{Bibliography}} % Change the page header to say "Bibliography"
 
-\bibliographystyle{unsrtnat} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
+\bibliographystyle{apalike} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
 
 \bibliography{Bibliography} % The references (bibliography) information are stored in the file named "Bibliography.bib"
 
