--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -434,10 +434,10 @@ processing and applications of glassy metals},
 }
 
 @article{setfl,
-
 	Author = {O'Brien, C.},
 	Title = {Formatting \textsc{EAM} \textsc{P}otentials},
-	url = {https://sites.google.com/a/ncsu.edu/cjobrien/tutorials-and-guides/eam}
+	url = {https://sites.google.com/a/ncsu.edu/cjobrien/tutorials-and-guides/eam},
+	year = 2015
 }
 
 @Book{shackelford04,
