Cap 1: agregado seccion muestra. Cap 3: agregado parrafo intro.

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -218,6 +218,17 @@ processing and applications of glassy metals},
 	Year = {2010}
 }
 
+@article{Duan05,
+
+	author = {Duan, G. and Xu, D. and Zhang, Q. and Zhang, G. and Cagin, T. and Johnson, W.L. and Goddard, W.A. III},
+	Journal = prb,
+	Volume = {71},
+	Pages = 224208,
+	Title = {Molecular dynamics study of the binary Cu$_{46}$Zr$_{54}$ metallic glass motivated by experiments:
+\textsc{G}lass formation and atomic-level structure},
+	Year = {2005}
+}
+
 @article{duwez60,
 
 	Author = {Fourie, J. T. and Weinberg, F. and Boswell, F. W. C},
@@ -558,6 +569,17 @@ processing and applications of glassy metals},
   year = 	 2012,
   volume =	 2,
   pages = 	 {13-16}
+}
+
+@Article{Xu04,
+  author = 	 {Xu, D. and Duan, G. and Johnson, W.L.},
+  title = 	 {Unusual \textsc{G}lass-\textsc{F}orming \textsc{A}bility of \textsc{B}ulk \textsc{A}morphous \textsc{A}lloys 
+    \textsc{B}ased on \textsc{O}rdinary \textsc{M}etal \textsc{C}opper},
+  journal = 	 prl,
+  year = 	 2004,
+  volume =	 92,
+  number = 	 24,
+  pages = 	 245504
 }
 
 @Article{yuan14,
