Capitulo 1: agregue secciones

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -239,6 +239,16 @@ processing and applications of glassy metals},
 	Year = {1960}
 }
 
+@article{Falk98,
+
+	Author = {Falk, M.L. and Langer J.S.},
+	Journal = {Phys. Rev. E},
+	Volume = {57},
+	Pages = {7192},
+	Title = {Dynamics of viscoplastic deformation in amorphous solids},
+	Year = {1998}
+}
+
 @Article{greer95,
   author = 	 {Greer, A.L.},
   title = 	 {Metallic glasses},
