--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -71,6 +71,15 @@
   pages = 	 {945-958}
 }
 
+@Article{argon79,
+  author = 	 {Argon, A.S.},
+  title = 	 {Plastic deformation in metallic glasses},
+  journal = 	 {Acta Metall.},
+  year = 	 1979,
+  volume =	 27,
+  pages = 	 {47--58}
+}
+
 @Article{arman10,
   author = 	 {Arman, B. and Luo, S.N. and Germann, T.C. and Ca\u{g}in, T.},
   title = 	 {Dynamic response of \textsc{C}u$_{46}$\textsc{Z}r$_{54}$ metallic glass to high-strain-rate shock loading: \textsc{P}lasticity, spall, and atomic-level structures},
@@ -241,7 +250,7 @@ processing and applications of glassy metals},
 
 @article{Falk98,
 
-	Author = {Falk, M.L. and Langer J.S.},
+	Author = {Falk, M.L. and Langer, J.S.},
 	Journal = {Phys. Rev. E},
 	Volume = {57},
 	Pages = {7192},
@@ -322,6 +331,15 @@ processing and applications of glassy metals},
   year = 	 2014,
   volume =	 590,
   pages = 	 {453-458}
+}
+
+@Article{Langer07,
+  author = 	 {Langer, J.S.},
+  title = 	 {Shear-transformation-zone theory of plastic deformation near the glass transition},
+  journal = 	 {Phys. Rev. E},
+  year = 	 2008,
+  volume =	 77,
+  pages = 	 {021502}
 }
 
 @Book{liebermann93,
