--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -452,6 +452,15 @@ processing and applications of glassy metals},
   url	 =	 {http://lammps.sandia.gov/}
 }
 
+@Article{Rycroft09,
+  author = 	 {Rycroft, C.H.},
+  title = 	 {Voro++: A three-dimensional Voronoi cell library in C++},
+  journal = 	 {Chaos},
+  year = 	 2009,
+  volume =	 19,
+  pages = 	 {041111}
+}
+
 @Article{schuh03,
   author = 	 {Schuh, C.A. and Lund, A.C.},
   title = 	 {Atomistic basis for the plastic yield criterion of metallic glass},
