--- a/main.tex
+++ b/main.tex
@@ -307,7 +307,7 @@ Las simulaciones fueron financiadas por los proyectos de investigación "06/B235
 \input{Chapters/Capitulo4} 
 \input{Chapters/Capitulo5} 
 \input{Chapters/Capitulo6} 
-%\input{Chapters/Capitulo7} 
+\input{Chapters/Capitulo7} 
 
 %----------------------------------------------------------------------------------------
 %	THESIS CONTENT - APPENDICES
