Mas imagenes porosidad

--- a/ResumenImagenes/main.tex
+++ b/ResumenImagenes/main.tex
@@ -629,31 +629,253 @@ run 50000
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/18_0strain.png}
-\caption{Porosidad 12\%. 0 strain}
+\caption{Porosidad 13\%. 0 strain}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/18_0strain_color.png}
-\caption{Porosidad 12\%. 0 strain}
+\caption{Porosidad 13\%. 0 strain}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/18_2strain_color.png}
-\caption{Porosidad 12\%. 2\% strain}
+\caption{Porosidad 13\%. 2\% strain}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/18_15strain_color.png}
-\caption{Porosidad 12\%. 15\% strain}
+\caption{Porosidad 13\%. 15\% strain}
 \end{figure}
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=8cm]{Figures/18_20strain_color.png}
-\caption{Porosidad 12\%. 20\% strain}
+\caption{Porosidad 13\%. 20\% strain}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_cu_strain.eps}
+\caption{Polyedros de voronoi centrados en atomos de cobre vs strain. Compresion? Traccion?}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_Pzz_strain_comp.eps}
+\caption{Pzz vs. strain. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_Pzz_strain_comp_dash.eps}
+\caption{Pzz vs. strain. Compresion. La linea punteada indica donde SVF = 1}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_Pzz_strain_tens.eps}
+\caption{Pzz vs. strain. Traccion.}
+\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{Figures/porosity_Pzz_strain_tens_dash.eps}
+%\caption{Pzz vs. strain. Traccion.}
+%\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_stress_strain_comp.eps}
+\caption{Stress VM vs strain. Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_stress_strain_comp_dash.eps}
+\caption{Stress VM vs strain. Compresion. La linea punteada indica donde SVF = 1}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_stress_strain_tens.eps}
+\caption{Stress VM vs strain. Traccion.}
+\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{Figures/porosity_stress_strain_tens_dash.eps}
+%\caption{???}
+%\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_SVF_strain.eps}
+\caption{Fraccion de volumen solido vs. strain}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_SVF_strain_comp.eps}
+\caption{Fraccion de volumen solido vs. strain. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_SVF_strain_comp_dash.eps}
+\caption{Fraccion de volumen solido vs. strain. Compresion. La linea punteada marca cuando SVF = 1. Para 13\% porosidad vemos que hay cambios de pendiente al 0.01, 0.095 y 0.12 strain. Estos valores se corresponden con los puntos donde la curva temperatura-strain cambia de pendiente. Para 6\% porosidad hay cambio de pendiente a 0.005, 0.04 y 0.065 strain. El primer cambio de pendiente es tal vez poco significativo, ya que la resolución de la curva es justamente 0.005 strain. }
+\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{Figures/porosity_SVF_strain_comp_dash2.eps}
+%\caption{???}
+%\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_SVF_strain_tens.eps}
+\caption{Fraccion de volumen solido vs. strain. Traccion}
+\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{Figures/porosity_SVF_strain_tens_dash.eps}
+%\caption{???}
+%\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{Figures/porosity_SVF_strain_tens_dash2.eps}
+%\caption{???}
+%\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_temp_strain_comp.eps}
+\caption{Temperatura vs strain. Compresion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_temp_strain_comp_dash.eps}
+\caption{Temperatura vs. strain. Compresion. La linea punteada indica cuando SVF = 1}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_temp_strain_tens.eps}
+\caption{Temperatura vs strain. Traccion}
+\end{figure}
+
+%\begin{figure}[H]
+%\centering
+%\includegraphics[width=8cm]{Figures/porosity_temp_strain_tens_dash.eps}
+%\caption{???}
+%\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_tipe3_strain_comp.eps}
+\caption{Polyedros de voronoi tipo 3 Compresion.}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosity_tipe3_strain_tens.eps}
+\caption{Polyedros de voronoi tipo 3. Traccion}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_STZObservation_3_0.png}
+\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0. Atomos shear strain superior a 0.25. Parte 1/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_STZObservation_3_0005.png}
+\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0.005. Atomos shear strain superior a 0.25. Parte 2/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_STZObservation_3_01.png}
+\caption{Porosidad 3\%. Surgimiento de STZ lejos de los poros. Strain 0.1. Atomos shear strain superior a 0.25. Parte 3/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_faceAS_0_02.png}
+\caption{Porosidad 3\%. Cara de la muestra. Strain 0. Color coding con shear strain entre 0 y 0.2. Parte 1/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_faceAS_0_02_0005.png}
+\caption{Porosidad 3\%. Cara de la muestra. Strain 0.005. Color coding con shear strain entre 0 y 0.2. Parte 2/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_3_faceAS_0_02_001.png}
+\caption{Porosidad 3\%. Cara de la muestra. Strain 0.01. Color coding con shear strain entre 0 y 0.2. Parte 3/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_0.png}
+\caption{Porosidad 6\%. Strain 0. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 1/4}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_006.png}
+\caption{Porosidad 6\%. Strain 0.06. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 2/4}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_012.png}
+\caption{Porosidad 6\%. Strain 0.12. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 3/4}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_6_shearstrain04_018.png}
+\caption{Porosidad 6\%. Strain 0.18. Los átomos coloreados son aquellos con shear strain superior a 0.4. Los mayores valores de shear strain se dan alrededor de los poros. Incluso cuando los poros ya se han colapsado, la distribución de shear strain conserva la misma forma. Parte 4/4}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_0_puente.png}
+\caption{Porosidad 13\%. Strain 0. Con 13\% porosidad, a 0.005 deformacion ya pueden observarse átomos sometidos a tensiones altas. Estos se ubican alrededor de los poros o separando poros formando una especie de puente como se puede observar en las dos figuras siguientes. Los átomos presentes son aquellos con shear strain superior a 0.2. Parte 1/2}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_0005_puente.png}
+\caption{Porosidad 13\%. Strain 0. Con 13\% porosidad, a 0.005 deformacion ya pueden observarse átomos sometidos a tensiones altas. Estos se ubican alrededor de los poros o separando poros formando una especie de puente como se puede observar en las dos figuras siguientes. Los átomos presentes son aquellos con shear strain superior a 0.2. Parte 2/2}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_shearstrain_poro_0.png}
+\caption{Porosidad 13\%. Strain 0. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Parte 1/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_shearstrain_poro_001.png}
+\caption{Porosidad 13\%. Strain 0.03. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Parte 2/3}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=8cm]{Figures/porosidad_13_shearstrain_poro_003.png}
+\caption{Porosidad 13\%. Strain 0.03. A 13\% porosidad no se observan STZ. Los STZ que se observan en deformaciones superiores son producto de poros que han colapsado. Sin embargo, estos STZ crecen muy poco. Shear strain superior a 0.2. Parte 3/3}
 \end{figure}
 
 \end{document}
